@@ -548,3 +548,4 @@ winws: --wf-raw-part
 nfqws: --dpi-desync=hostfakesplit
 blockcheck: new strategies
 blockcheck: curl test simulation : SIMULATE=1
+blockcheck: print strategies that work for all tested domains. can be trusted only if SCANLEVEL=force.
